[tool.poetry]
name = "scl"
version = "0.1.0"
description = ""
authors = ["shchen <c95csh@ncsist.org.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
