[tool.poetry]
name = "scl"
version = "0.1.0"
description = ""
authors = ["shchen <c95csh@ncsist.org.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
nltk = "^3.5"
transformers = "^4.4.1"
torch = "^1.8.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
